objects/Customer_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Invoices</relationshipLabel>
        <relationshipName>Customer_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <label>Customer ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Site_ID__c</fullName>
        <label>Customer Site ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Site</label>
        <referenceTo>Customer_Site__c</referenceTo>
        <relationshipLabel>Customer Invoices</relationshipLabel>
        <relationshipName>Customer_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desciption__c</fullName>
        <label>Desciption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_ID__c</fullName>
        <label>Invoice ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Due__c</fullName>
        <label>Net Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <label>Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Customer Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Member_Experience_Customer_Invoice</fullName>
        <filterScope>Queue</filterScope>
        <label>Member Experience</label>
        <queue>Member_Experience</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Customer Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>